border edges / switched to memoir

--- a/resources/LaTeX/1.6.introduction.to.proofs/1.6.compilation/1.6.compilation.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1.6.compilation/1.6.compilation.tex
@@ -8,7 +8,6 @@
 
 
 \newtheorem{theorem}{Theorem}
-%\newtheorem*{theorem*}{Theorem}
 
 
 \renewcommand\qedsymbol{$\blacksquare$}
@@ -38,20 +37,22 @@
 % ============================== 1.04 Theorem 1604 =================================
 \section{The additive inverse of an even number.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1604/1604.tex}
-\begin{center}
-    \vspace{2\baselineskip}
-    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/socrates.jpg}
-\end{center}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=11cm]{../resources/jpg/1.6.introduction.to.proofs/socrates.jpg}
+    \caption*{\emph{Socrates receiving hemlock.}}
+\end{figure}    
 \pagebreak
 
 
 % ============================== 1.05 Theorem 1605 =================================
 \section{Special even parity.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1605/1605.tex}
-\begin{center}
-    \vspace{1\baselineskip}
+\begin{figure}[h!]
+    \centering
     \includegraphics[width=11cm]{../resources/jpg/1.6.introduction.to.proofs/plato-republic.jpg}
-\end{center}
+    \caption*{\emph{Plato and Aristotle.}}
+\end{figure} 
 
 
 % ============================== 1.06 Theorem 1606 =================================
@@ -64,10 +65,11 @@
 \section{Two plus a perfect square is not perfect.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1608/1608.tex}
 \sep
-\begin{center}
-    \vspace{1\baselineskip}
+\begin{figure}[h!]
+    \centering
     \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/know_thyself.jpg}
-\end{center}
+    \caption*{\emph{Know thyself.}}
+\end{figure} 
 \pagebreak
 
 
@@ -81,10 +83,11 @@
 \section{The product of two rational numbers is rational.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1610/1610.tex}
 \sep
-\begin{center}
-    \vspace{2\baselineskip}
-    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/pythagoras.png}
-\end{center}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/pythagoras.jpg}
+    \caption*{\emph{Pythagoras.}}
+\end{figure}
 \pagebreak
 
 
@@ -102,13 +105,15 @@
 
 
 % ============================== 1.12 Theorem 1614 ================================
-\begin{center}
-    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/euclid.jpg}
-\end{center}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=11.5cm]{../resources/jpg/1.6.introduction.to.proofs/euclid.jpg}
+    \caption*{\emph{Euclid.}}
+\end{figure}
 \section{The multiplicative inverse of a rational number.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1614/1614.tex}
 \sep
-\vspace{0.5\baselineskip}
+\vspace{0.3\baselineskip}
 
 % ============================== 1.13 Theorem 1615 ================================
 \section{A special corollary from additive compatibility.}
