--- a/resources/LaTeX/title/title.tex
+++ b/resources/LaTeX/title/title.tex
@@ -5,7 +5,7 @@
 
 
 \begin{document}
-    \begin{titlepage}
+    \begin{titlingpage}
         \hypertarget{pdftitle}{}
         \bookmark[dest=pdftitle, level=chapter]{Title}
         \centering
@@ -17,5 +17,5 @@
         \vspace{4\baselineskip}
         %\scshape \large Author:Chris Hamberg \par
         \scshape \large chris.hamberg@programmer.net \par      
-    \end{titlepage}
+    \end{titlingpage}
 \end{document}
