--- a/Book of Proofs/Book of Proofs.tex
+++ b/Book of Proofs/Book of Proofs.tex
@@ -1,8 +1,6 @@
-\documentclass[a5paper 12pt]{book}
-%\documentclass[a5paper 12pt]{memoir}
-%\usepackage[UTF-8]{inputenc}
+\documentclass[a5paper 12pt]{memoir}
 \usepackage[T1]{fontenc}
-%\usepackage[english]{bable}
+\usepackage[english]{babel}
 \usepackage{amssymb} 
 \usepackage{amsthm}
 \usepackage{mathtools}
@@ -11,12 +9,48 @@
 \usepackage{bm}
 \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{caption}
 \usepackage{standalone}
 \usepackage{fancyhdr}
 \usepackage[fit, breakall]{truncate}
 \usepackage{bookmark}
 \usepackage{titlesec}
 \usepackage[margin=1.5in]{geometry}
+
+\usepackage{color,calc,graphicx,soul,fourier}
+\definecolor{nicered}{rgb}{0,.5,.55} %{.647,.129,.149}
+\makeatletter
+\newlength\dlf@normtxtw
+\setlength\dlf@normtxtw{\textwidth}
+\def\myhelvetfont{\def\sfdefault{mdput}}
+\newsavebox{\feline@chapter}
+\newcommand\feline@chapter@marker[1][4cm]{%
+\sbox\feline@chapter{%
+\resizebox{!}{#1}{\fboxsep=1pt%
+\colorbox{nicered}{\color{white}\bfseries\sffamily\thechapter}%
+}}%
+\rotatebox{90}{%
+\resizebox{%
+\heightof{\usebox{\feline@chapter}}+\depthof{\usebox{\feline@chapter}}}%
+{!}{\scshape\so\@chapapp}}\quad%
+\raisebox{\depthof{\usebox{\feline@chapter}}}{\usebox{\feline@chapter}}%
+}
+\newcommand\feline@chm[1][4cm]{%
+\sbox\feline@chapter{\feline@chapter@marker[#1]}%
+\makebox[0pt][l]{% aka \rlap
+\makebox[1cm][r]{\usebox\feline@chapter}%
+}}
+\makechapterstyle{daleif1}{
+\renewcommand\chapnamefont{\normalfont\Large\scshape\raggedleft\so}
+\renewcommand\chaptitlefont{\normalfont\huge\bfseries\scshape\color{nicered}}
+\renewcommand\chapternamenum{}
+\renewcommand\printchaptername{}
+\renewcommand\printchapternum{\null\hfill\feline@chm[2.5cm]\par}
+\renewcommand\afterchapternum{\par\vskip\midchapskip}
+\renewcommand\printchaptertitle[1]{\chaptitlefont\raggedleft ##1\par}
+}
+\makeatother
+\chapterstyle{daleif1}
 
 
 \newtheorem{theorem}{Theorem}
@@ -34,7 +68,7 @@
 \newcommand{\sep}{
     \begin{center}
         \vspace{1\baselineskip}
-    \includegraphics[width=0.75cm]{../resources/jpg/sep.png}
+    \includegraphics[width=0.75cm]{../resources/jpg/eulers_infinity.png}
 \end{center}
 }
 
@@ -89,6 +123,10 @@
 \titlespacing*{\section}
     {0pt}{5.5ex plus 1ex minus .2ex}{4.3ex plus .2ex}
 
+\definecolor{section}{rgb}{0,.5,.55}
+\titleformat{\section}
+    {\normalfont\fontsize{15}{15}\bfseries}{\color{section}\thesection}{1em}{}
+
 
 \begin{document}
 
@@ -98,6 +136,7 @@
 
 
 \frontmatter
+\pagenumbering{roman}
 % =================================== Title ===================================
 \input{../resources/LaTeX/title/title.tex}
 \thispagestyle{empty}
