let relax bm caused an issue making inline operators invisible. Fixed that issue for chapter 1.

--- a/Book of Proofs/Book of Proofs.tex
+++ b/Book of Proofs/Book of Proofs.tex
@@ -1,7 +1,9 @@
-\documentclass[a5paper 12pt]{memoir}
+\documentclass[a4paper, 12pt]{memoir}
+\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-\usepackage{amssymb} 
+\usepackage{amssymb}
+\usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{mathtools}
 \usepackage{algorithm}
@@ -121,7 +123,7 @@
 
 
 \titlespacing*{\section}
-    {0pt}{5.5ex plus 1ex minus .2ex}{4.3ex plus .2ex}
+    {0pt}{3.7ex plus 1ex minus .2ex}{4.3ex plus .2ex}
 
 \definecolor{section}{rgb}{0,.5,.55}
 \titleformat{\section}
