--- a/resources/LaTeX/1.6.introduction.to.proofs/1602/1602.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1602/1602.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -14,13 +13,13 @@
 \begin{theorem} %[\textbf{1602}]
     Let \bm{$\chi$} and \bm{$\zeta$} be integers. 
     If \bm{$\chi$} and \bm{$\zeta$} are even, 
-    then \bm{$\chi + \zeta$} is even.
+    then \bm{$\chi \textbf{ + } \zeta$} is even.
 \end{theorem}
 
 \begin{proof}
     By the definition for even numbers, 
     there exist integers \bm{$\mu$} and \bm{$\nu$} such that 
-    \bm{$2\mu = \chi$} and \bm{$2\nu = \zeta$}. 
+    \bm{$2\mu \textbf{ = } \chi$} and \bm{$2\nu \textbf{ = } \zeta$}. 
     Hence,
     \begin{equation*}
         \chi + \zeta 
@@ -37,10 +36,10 @@
     \end{equation*} 
     Integers are closed under addition. 
     Thus, the factor 
-    \bm{$\big \langle \mu + \nu \big \rangle$} 
+    \bm{$\big \langle \mu \textbf{ + } \nu \big \rangle$} 
     is an integer. 
-    It follows that \bm{$\chi + \zeta$} is even, 
+    It follows that \bm{$\chi \textbf{ + } \zeta$} is even, 
     by the definition for even numbers.
-\color{lightgray} \end{proof}
+\end{proof}
 
 \end{document}
