--- a/resources/LaTeX/1.6.introduction.to.proofs/1603/1603.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1603/1603.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -19,7 +18,7 @@
 \begin{proof}
     By the definition for even numbers, 
     there exists an integer \bm{$\eta$} such that 
-    \bm{$\chi = 2\eta$}. 
+    \bm{$\chi \textbf{ = } 2\eta$}. 
     Hence,
     \begin{equation*}
         \big \langle 2 \eta \big \rangle ^2 
@@ -33,6 +32,6 @@
     \bm{$\big \langle 2 \eta ^2 \big \rangle$} is an integer. 
     It follows that \bm{$\chi^2$} is even, by 
     the definition for even numbers.
-\color{lightgray} \end{proof}
+\end{proof}
 
 \end{document}
