--- a/resources/LaTeX/1.6.introduction.to.proofs/1604/1604.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1604/1604.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsmath, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -19,7 +18,7 @@
 \begin{proof}
     Let \bm{$\chi$} be an even number. 
     There exists an integer \bm{$\eta$} such that 
-    \bm{$\chi = 2\eta$}, 
+    \bm{$\chi \textbf{ = } 2\eta$}, 
     by the definition for even numbers. 
     The additive inverse for \bm{$\chi$} is,
     \begin{equation*}
@@ -34,10 +33,10 @@
         2 \big \langle - \eta \big \rangle
     \end{equation*}
     Since integers are closed under multiplication, 
-    the factor \bm{$\big \langle -\eta \big \rangle$} is an integer. 
+    the factor \bm{$\big \langle \textbf{ - } \eta \big \rangle$} is an integer. 
     It follows that the additive inverse of \bm{$\chi$} is an even number, 
     by the definition for even numbers.
-\color{lightgray} \end{proof}
+\end{proof}
 
 
 \end{document}
