--- a/resources/LaTeX/1.6.introduction.to.proofs/1606/1606.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1606/1606.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -20,7 +19,7 @@
     Suppose that \bm{$\mu$} and \bm{$\zeta$} are odd numbers. 
     By the definition for odd numbers, 
     there exist integers \bm{$\sigma$} and \bm{$\epsilon$} such that 
-    \bm{$\mu = 2\sigma + 1$} and \bm{$\zeta = 2\epsilon + 1$}. 
+    \bm{$\mu \textbf{ = } 2\sigma \textbf{ + } 1$} and \bm{$\zeta \textbf{ = } 2\epsilon \textbf{ + } 1$}. 
     Thus, the product of odd numbers \bm{$\mu \zeta$} is,
     \begin{equation*}
         \mu \zeta 
@@ -42,11 +41,11 @@
         \Big]
     \end{equation*}     
     The factor 
-    \bm{$\big \langle \sigma \epsilon + \sigma + \epsilon \big \rangle$} 
+    \bm{$\big \langle \sigma \epsilon \textbf{ + } \sigma \textbf{ + } \epsilon \big \rangle$} 
     is an integer because \bm{$\sigma$} and \bm{$\epsilon$} are integers by definition, 
     and integers are closed on addition. 
     Therefore, \bm{$\mu \zeta$} is odd by the definition for odd numbers.
-\color{lightgray} \end{proof}
+\end{proof}
 
 
 \end{document}
