--- a/resources/LaTeX/1.6.introduction.to.proofs/1609/1609.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1609/1609.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -24,15 +23,15 @@
     That is, the proposition 
         $$\lnot p: \emph{the sum of an irrational number and a rational number 
         is rational.}$$
-    Hence, \bm{$\chi + \mu = \zeta$}, 
+    Hence, \bm{$\chi \textbf{ + } \mu \textbf{ = } \zeta$}, 
     by the assumption \bm{$\lnot p$}. 
     Thus, 
-    \bm{$\chi = \zeta + \big \langle - \mu \big \rangle$}, 
+    \bm{$\chi \textbf{ = } \zeta \textbf{ + } \big \langle \textbf{ - } \mu \big \rangle$}, 
     by the additive equality property for equations. 
     But rational numbers are closed under addition by the closure property for rational numbers. 
     So \bm{$\lnot p$} implies \bm{$\chi$} is rational, 
     and \bm{$\chi$} is irrational; a contradiction.
-\color{lightgray} \end{proof}
+\end{proof}
 
 
 \end{document}
