--- a/resources/LaTeX/1.6.introduction.to.proofs/1610/1610.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1610/1610.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -20,12 +19,12 @@
     Let \bm{$\mu$} and \bm{$\zeta$} be rational numbers. 
     By the definition for rational numbers, 
     there exist integers \bm{$\alpha$}, \bm{$\beta$}, \bm{$\gamma$}, and \bm{$\delta$} such that 
-    \bm{$\mu = \frac{\alpha}{\beta}$} and \bm{$\zeta = \frac{\gamma}{\delta}$}. 
+    \bm{$\mu \textbf { = } \frac{\alpha}{\beta}$} and \bm{$\zeta \textbf { = } \frac{\gamma}{\delta}$}. 
     The product of \bm{$\mu$} and \bm{$\zeta$} is \bm{$\frac{\alpha\gamma}{\beta\delta}$}. 
     Since integers are closed under multiplcation, 
     \bm{$\alpha\gamma$} and \bm{$\beta\delta$} are integers. 
     Thus \bm{$\mu\zeta$} is rational by definition.
-\color{lightgray} \end{proof}
+\end{proof}
 
 
 
