--- a/resources/LaTeX/1.6.introduction.to.proofs/1612/1612.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1612/1612.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -22,10 +21,10 @@
     the proposition 
         $$\lnot p : \emph{the product of a nonzero rational number and an 
         irrational number}$$
-        $\indent \indent \indent \emph{is rational}$
+        $\indent \indent \emph{is rational}$
         \\ \\
     Let \bm{$\alpha$}, \bm{$\beta$}, \bm{$\gamma$}, and \bm{$\delta$} be integers such that 
-    \bm{$\alpha \neq 0$}, and let \bm{$\chi$} be an irrational number. 
+    \bm{$\alpha \textbf{ $\neq$ } 0$}, and let \bm{$\chi$} be an irrational number. 
     Then the proposition \bm{$\lnot p$} states 
     \begin{equation*}
         \Bigg(
@@ -53,7 +52,7 @@
     By Theorem 9 (the closure property for multplication on rational numbers,) 
     \bm{$\chi$} is rational. 
     Thus, \bm{$\lnot p$} implies \bm{$\chi$} is rational and irrational.
-\color{lightgray} \end{proof}
-\
+\end{proof}
+
 
 \end{document}
