--- a/resources/LaTeX/1.6.introduction.to.proofs/1613/1613.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1613/1613.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -22,7 +21,7 @@
     Suppose that \bm{$\frac{1}{\chi}$} is a rational number. 
     By the definition for rational numbers, 
     there exist integers \bm{$\alpha$} and \bm{$\gamma$} such that 
-    \bm{$\frac{1}{\chi} = \frac{\alpha}{\gamma}$}. 
+    \bm{$\frac{1}{\chi} \textbf{ = } \frac{\alpha}{\gamma}$}. 
     Note that \bm{$\alpha$} is nonzero (because \bm{$\frac{1}{\chi}$} is nonzero.) 
     By the multiplicative property of equality for equations,
     \begin{equation*}
@@ -52,11 +51,11 @@
             \chi
         \bigg\}
     \end{equation*}
-    \bm{$\frac{\gamma}{\alpha} = \chi$} is rational, 
+    \bm{$\frac{\gamma}{\alpha} \textbf{ = } \chi$} is rational, 
     by definition. 
     Thus, if \bm{$\frac{1}{\chi}$} is rational, 
     then \bm{$\chi$} is rational.
-\color{lightgray} \end{proof}
-\
+\end{proof}
+
 
 \end{document}
