--- a/resources/LaTeX/1.6.introduction.to.proofs/1614/1614.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1614/1614.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -13,13 +12,14 @@
 
 
 \begin{theorem} %[\textbf{1614}]
-    If \bm{$\chi$} is a rational number and \bm{$\chi \neq 0$}, 
+    If \bm{$\chi$} is a rational number and 
+    \bm{$\chi \textbf{ $\neq$ } 0$}, 
     then \bm{$\frac{1}{\chi}$} is rational.
 \end{theorem}
 
 \begin{proof}
     Let \bm{$\alpha$} and \bm{$\gamma$} be nonzero integers. 
-    \bm{$\chi = \frac{\alpha}{\gamma}$}, 
+    \bm{$\chi \textbf{ = } \frac{\alpha}{\gamma}$}, 
     by the definition for rational numbers. 
     By the multiplicative property of equality for equations
     \begin{equation*}
@@ -49,10 +49,10 @@
             \frac{1}{\chi}
         \right\}
     \end{equation*}
-    \bm{$\frac{\gamma}{\alpha} = \frac{1}{\chi}$} is rational, by definition. 
-    Thus, if \bm{$\chi$} is a rational number and \bm{$\chi \neq 0$}, 
+    \bm{$\frac{\gamma}{\alpha} \textbf{ = } \frac{1}{\chi}$} is rational, by definition. 
+    Thus, if \bm{$\chi$} is a rational number and \bm{$\chi \textbf{ $\neq$ } 0$}, 
     then \bm{$\frac{1}{\chi}$} is rational.
-\color{lightgray} \end{proof}
-\
+\end{proof}
+
 
 \end{document}
