--- a/resources/LaTeX/1.6.introduction.to.proofs/1618/1618.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1618/1618.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -14,7 +13,7 @@
 
 \begin{theorem} %[\textbf{1618}]
     Let \bm{$\gamma$} be an integer. 
-    If \bm{$3 \gamma + 2$} is even, 
+    If \bm{$3 \gamma \textbf{ + } 2$} is even, 
     then \bm{$\gamma$} is even.
 \end{theorem}
 
@@ -23,7 +22,7 @@
     Suppose \bm{$\gamma$} were odd. 
     By the definition of odd numbers,
     there exist an integer \bm{$\mu$} such that 
-    \bm{$\gamma = 2 \mu + 1$}. 
+    \bm{$\gamma \textbf{ = } 2 \mu \textbf{ + } 1$}. 
     Thus,
     \begin{equation*}
         \Big \langle
@@ -42,11 +41,10 @@
             2 \big[ 3 \mu + 2 \big] + 1
         \Big \rangle
     \end{equation*} 
-    The factor \bm{$\big[ 3 \mu + 2 \big]$} is an integer, 
+    The factor \bm{$\big[ 3 \mu \textbf{ + } 2 \big]$} is an integer, 
     since integers are closed on addition and multiplcation. 
-    Thus, \bm{$3\gamma + 2$} is odd, by definition.
-\color{lightgray} \end{proof}
-
+    Thus, \bm{$3\gamma \textbf{ + } 2$} is odd, by definition.
+\end{proof}
 
 
 \end{document}
