--- a/resources/LaTeX/1.6.introduction.to.proofs/1625/1625.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1625/1625.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -14,12 +13,13 @@
 
 \begin{theorem} %[\textbf{1625}]
     There does not exist a rational number \bm{$\rho$} such that 
-    \bm{$\rho^3 + \rho + 1 = 0$}.
+    \bm{$\rho^3 \textbf{ + } \rho \textbf{ + } 1 \textbf{ = } 0$}.
 \end{theorem}
 
 \begin{proof}
     For the purpose of contradiction, 
-    assume that there exists a rational number \bm{$\rho$} satisfying the equation \bm{$\rho^3 + \rho + 1 = 0$}. 
+    assume that there exists a rational number \bm{$\rho$} satisfying the equation 
+    \bm{$\rho^3 \textbf{ + } \rho \textbf{ + } 1 \textbf{ = } 0$}. 
     By the definition for rational numbers, 
     there exist integers \bm{$\alpha$} and \bm{$\beta$} (\bm{$\beta$} is nonzero,) such that 
     \begin{equation*}
@@ -88,8 +88,7 @@
     \bm{$\rho$} is imaginary and rational. 
     Thus, the negation of the hypothesis implies a contradiction. 
     In other words, \bm{$\rho$} does not exist.
-\color{lightgray} \end{proof}
-
+\end{proof}
 
 
 \end{document}
