--- a/resources/LaTeX/2.2.set.operations/2.2.compilation/2.2.compilation.tex
+++ b/resources/LaTeX/2.2.set.operations/2.2.compilation/2.2.compilation.tex
@@ -1,4 +1,5 @@
 \documentclass[preview]{standalone}
+\usepackage[utf8]{inputenc}
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{xcolor}
@@ -10,27 +11,22 @@
 
 \renewcommand\qedsymbol{$\blacksquare$}
 
-%\setcounter{page}{9}
 
 \begin{document}
 
-%\section*{\color{black} 2.2 Set Operations}
-%\begin{center} \color{gray}
-%    \rule{5.4in}{1pt}
-%\end{center}
-
 
 % ============================== Theorem 2205 ================================
+\section{The set complementation law.}
 \input{../resources/LaTeX/2.2.set.operations/2205/2205.tex}
-%\input{../2205/2205.tex}
-\begin{center} \color{lightgray}
-    \rule{5.4in}{0.1pt}
-\end{center}
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=6cm]{../resources/jpg/2.2.set.operations/set.jpg}
+\end{figure}
+\pagebreak
 
 
 % ============================= Theorem 2206a ================================
 \input{../resources/LaTeX/2.2.set.operations/2206a/2206a.tex}
-%\input{../2206a/2206a.tex}
 \pagebreak
 
 
