--- a/resources/LaTeX/2.2.set.operations/2205/2205.tex
+++ b/resources/LaTeX/2.2.set.operations/2205/2205.tex
@@ -5,17 +5,17 @@
 \usepackage{xcolor}
 
 
-\newtheorem*{theorem*}{Theorem}
+\newtheorem{theorem}{Theorem}
 \renewcommand\qedsymbol{$\blacksquare$}
 
 
 \begin{document}
 
 
-\begin{theorem*}[\textbf{2205}] \color{black}
-    Let \bm{$\Lambda$} be a subset of \bm{$\Omega$}. 
-    \bm{$\overline{\overline{\Lambda}} = \Lambda$}.
-\end{theorem*}
+\begin{theorem} %[\textbf{2205}] \color{black}
+    Let \bm{$\Lambda$} be a subset of \space \bm{$\Omega$}.
+    \bm{$\overline{\overline{\Lambda}} \text{ = } \Lambda$}.
+\end{theorem}
 \begin{proof} \color{black}
     Suppose there exists an element \bm{$\chi$} such that \bm{$\chi$} is a member of 
     \bm{$\overline{\overline{\Lambda}}$}. 
@@ -49,7 +49,7 @@
             \overline{\overline{\Lambda}}
         \Big \rangle
     \end{equation*}
-    $\therefore \text{\space} \bm{\overline{\overline{\Lambda}} = \Lambda$}; 
+    $\therefore \text{\space} \bm{\overline{\overline{\Lambda}} \text{ = } \Lambda$}; 
     the complementation law for sets.
 \color{lightgray} \end{proof}
 
