--- a/resources/LaTeX/1.6.introduction.to.proofs/1.6.compilation/1.6.compilation.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1.6.compilation/1.6.compilation.tex
@@ -18,14 +18,19 @@
 
 % ============================== 1.01 Theorem 1601 ================================
 \section{The sum of two odd integers is even.}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=12cm]{../resources/jpg/1.6.introduction.to.proofs/euclid.jpg}
+    \caption*{\emph{Euclid.}}
+\end{figure} 
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1601/1601.tex}
-\sep
+\pagebreak
 
 
 % ============================== 1.02 Theorem 1602 =================================
 \section{The sum of two even integers is even.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1602/1602.tex}
-\pagebreak
+\sep
 
 
 % ============================== 1.03 Theorem 1603 =================================
@@ -36,23 +41,16 @@
 
 % ============================== 1.04 Theorem 1604 =================================
 \section{The additive inverse of an even number.}
-\input{../resources/LaTeX/1.6.introduction.to.proofs/1604/1604.tex}
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=11cm]{../resources/jpg/1.6.introduction.to.proofs/socrates.jpg}
-    \caption*{\emph{Socrates receiving hemlock.}}
-\end{figure}    
+\input{../resources/LaTeX/1.6.introduction.to.proofs/1604/1604.tex} 
 \pagebreak
 
 
 % ============================== 1.05 Theorem 1605 =================================
 \section{Special even parity.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1605/1605.tex}
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=11cm]{../resources/jpg/1.6.introduction.to.proofs/plato-republic.jpg}
-    \caption*{\emph{Plato and Aristotle.}}
-\end{figure} 
+\begin{center}
+    \includegraphics[width=6cm]{../resources/jpg/1.6.introduction.to.proofs/olympics.jpg}
+\end{center}
 
 
 % ============================== 1.06 Theorem 1606 =================================
@@ -64,30 +62,24 @@
 % ============================== 1.07 Theorem 1608 =================================
 \section{Two plus a perfect square is not perfect.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1608/1608.tex}
+\vspace{1.5\baselineskip}
 \sep
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/know_thyself.jpg}
-    \caption*{\emph{Know thyself.}}
-\end{figure} 
 \pagebreak
 
 
 % ============================== 1.08 Theorem 1609 =================================
 \section{The sum of irrational and rational is irrational.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1609/1609.tex}
-\sep
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=12.5cm]{../resources/jpg/1.6.introduction.to.proofs/plato-republic.jpg}
+    \caption*{\emph{Plato and Aristotle.}}
+\end{figure}
 
 
 % ============================== 1.09 Theorem 1610 ================================
 \section{The product of two rational numbers is rational.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1610/1610.tex}
-\sep
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/pythagoras.jpg}
-    \caption*{\emph{Pythagoras.}}
-\end{figure}
 \pagebreak
 
 
@@ -95,7 +87,6 @@
 \section{The product of irrational and rational is irrational.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1612/1612.tex}
 \sep
-\vspace{0.1\baselineskip}
 
 
 % ============================== 1.11 Theorem 1613 ================================
@@ -105,15 +96,14 @@
 
 
 % ============================== 1.12 Theorem 1614 ================================
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=11.5cm]{../resources/jpg/1.6.introduction.to.proofs/euclid.jpg}
-    \caption*{\emph{Euclid.}}
-\end{figure}
 \section{The multiplicative inverse of a rational number.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1614/1614.tex}
-\sep
-\vspace{0.3\baselineskip}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=13cm]{../resources/jpg/1.6.introduction.to.proofs/pythagoras.jpg}
+    \caption*{\emph{Pythagoras.}}
+\end{figure}
+
 
 % ============================== 1.13 Theorem 1615 ================================
 \section{A special corollary from additive compatibility.}
@@ -124,30 +114,40 @@
 % ============================== 1.14 Theorem 1616 ================================
 \section{Divisors of an even number.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1616/1616.tex}
-\sep
-\vspace{0.2\baselineskip}
-\begin{center}
-    \includegraphics[width=6cm]{../resources/jpg/1.6.introduction.to.proofs/olympics.jpg}
-\end{center}
-\sep
-
-
-% ============================== 1.15 Theorem 1617 ================================
-\section{Odd integers of the form $\bm{\zeta ^3 + 5}$.}
-\input{../resources/LaTeX/1.6.introduction.to.proofs/1617/1617.tex}
-%\input{../1617/1617.tex}
+%\sep
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=8.5cm]{../resources/jpg/1.6.introduction.to.proofs/plato.jpg}
+    \caption*{\emph{Plato.}}
+\end{figure}
 \pagebreak
 
 
+% ============================== 1.15 Theorem 1617 ================================
+\section{Odd integers of the form $\bm{\zeta ^3 \textbf{ + } 5}$.}
+\input{../resources/LaTeX/1.6.introduction.to.proofs/1617/1617.tex}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=13.25cm]{../resources/jpg/1.6.introduction.to.proofs/socrates.jpg}
+    \caption*{\emph{Socrates with hemlock.}}
+\end{figure}
+
+
 % ============================== 1.16 Theorem 1618 ================================
-\section{Even numbers of the form $\bm{3 \gamma + 2}$.}
+\section{Even numbers of the form $\bm{3 \gamma \textbf{ + } 2}$.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1618/1618.tex}
-\sep
+\pagebreak
 
 
 % ============================== 1.17 Theorem 1625 ================================
 \section{$\bm{\rho}$ does not exist.}
 \input{../resources/LaTeX/1.6.introduction.to.proofs/1625/1625.tex}
+\sep
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=10cm]{../resources/jpg/1.6.introduction.to.proofs/know_thyself.jpg}
+    \caption*{\emph{Know thyself.}}
+\end{figure} 
 \pagebreak
 \thispagestyle{empty}
 
