--- a/resources/LaTeX/1.6.introduction.to.proofs/1616/1616.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/1616/1616.tex
@@ -2,7 +2,6 @@
 \usepackage{amssymb, amsthm}
 \usepackage{mathtools}
 \usepackage{bm}
-\usepackage{xcolor}
 
 
 \newtheorem{theorem}{Theorem}
@@ -24,7 +23,7 @@
         $$\lnot q : \mu \text{ is odd and } \zeta \text{ is odd.}$$ 
     By definition, 
     there exist integers \bm{$\sigma$} and \bm{$\epsilon$} such that 
-    \bm{$\mu = 2\sigma + 1$} and \bm{$\zeta = 2\epsilon + 1$}. 
+    \bm{$\mu \textbf{ = } 2\sigma \textbf{ + } 1$} and \bm{$\zeta \textbf{ = } 2\epsilon \textbf{ + } 1$}. 
     Thus, 
     \begin{equation*}
         \mu\zeta 
@@ -42,11 +41,11 @@
         \Big]
     \end{equation*}
     The factor 
-    \bm{$\big \langle \sigma \epsilon + \sigma + \epsilon \big \rangle$} 
+    \bm{$\big \langle \sigma \epsilon \textbf{ + } \sigma \textbf{ + } \epsilon \big \rangle$} 
     is an integer, 
     because integers are closed under addition and multiplication. 
     Thus, the product \bm{$\mu \zeta$} is odd, by definition.
-\color{lightgray} \end{proof}
-\
+\end{proof}
+
 
 \end{document}
