--- a/resources/LaTeX/2.2.set.operations/0047_2221/2221.tex
+++ b/resources/LaTeX/2.2.set.operations/0047_2221/2221.tex
@@ -13,16 +13,18 @@
 
 \begin{theorem}[\textbf{2221}]
     Let \bm{$\mathrm{A}$}, \bm{$\Lambda$}, and \bm{$\Delta$} be sets. 
-    \bm{$
-    \mathrm{A} 
-        \cup 
-    \big \langle \Lambda \cup \Delta \big \rangle 
-        = 
-    \big \langle \mathrm{A} \cup \Lambda \big \rangle 
-        \cup 
-    \Delta
-    $}, 
-    such that set union is associative.
+    Set union is associative such that
+    \begin{equation*}
+        \bm{
+            \mathrm{A} 
+                \cup 
+            \big \langle \Lambda \cup \Delta \big \rangle 
+                = 
+            \big \langle \mathrm{A} \cup \Lambda \big \rangle 
+                \cup 
+            \Delta
+        } 
+    \end{equation*}
 \end{theorem}
 \begin{proof}
     Let \bm{$\lambda$} be an element in 
