--- a/resources/LaTeX/2.2.set.operations/0048_2222/2222.tex
+++ b/resources/LaTeX/2.2.set.operations/0048_2222/2222.tex
@@ -13,16 +13,18 @@
 
 \begin{theorem}[\textbf{2222}]
     Let \bm{$\mathrm{A}$}, \bm{$\Lambda$}, and \bm{$\Delta$} be sets. 
-    \bm{$
-    \mathrm{A} 
-        \cap 
-    \big \langle \Lambda \cap \Delta \big \rangle 
-        = 
-    \big \langle \mathrm{A} \cap \Lambda \big \rangle
-        \cap 
-    \Delta
-    $}, 
-    such that set intersection is associative.
+    Set intersection is associative such that
+    \begin{equation*}
+        \bm{
+            \mathrm{A} 
+                \cap 
+            \big \langle \Lambda \cap \Delta \big \rangle 
+                = 
+            \big \langle \mathrm{A} \cap \Lambda \big \rangle
+                \cap 
+            \Delta
+        }
+\end{equation*}
 \end{theorem}
 \begin{proof}
     Let \bm{$\lambda$} be an element in 
