--- a/resources/LaTeX/2.2.set.operations/0049_2223/2223.tex
+++ b/resources/LaTeX/2.2.set.operations/0049_2223/2223.tex
@@ -13,7 +13,7 @@
 
 \begin{theorem}[\textbf{2223}]
     Let \bm{$\mathrm{A}$}, \bm{$\Lambda$}, and \bm{$\Delta$} be sets.
-    Set union is distributive over set intersection such that
+    Set union is distributive such that
     \begin{equation*}
         \bm{
             \mathrm{A} \cup \Big \langle \Lambda \cap \Delta \Big \rangle 
