images ch1 and 2.

--- a/resources/LaTeX/1.6.introduction.to.proofs/0010_1612/0010_1612.tex
+++ b/resources/LaTeX/1.6.introduction.to.proofs/0010_1612/0010_1612.tex
@@ -12,7 +12,7 @@
 
 
 \begin{theorem} %[\textbf{1612}]
-    The product of a nonzero rational number and an irrational number is 
+    The product of a nonzero rational number and an irrational\\number is 
     irrational.
 \end{theorem}
 
