--- a/resources/LaTeX/2.2.set.operations/0058_2238a/2238a.tex
+++ b/resources/LaTeX/2.2.set.operations/0058_2238a/2238a.tex
@@ -13,7 +13,7 @@
 
 \begin{theorem}[\textbf{2238a}]
     Let \bm{$\mathrm{A}$}, and \bm{$\Lambda$} be sets. 
-    The symmetric difference of sets is associative such that 
+    Symmetric difference of sets is associative such that 
     \begin{equation*}
         \bm{
             \big \langle \mathrm{A} \oplus \Lambda \big \rangle
