--- a/resources/LaTeX/2.2.set.operations/0060_2240/2240.tex
+++ b/resources/LaTeX/2.2.set.operations/0060_2240/2240.tex
@@ -13,7 +13,7 @@
 
 \begin{theorem}[\textbf{2240}]
     Let \bm{$\Gamma$}, \bm{$\Pi$}, and \bm{$\Xi$} be sets. 
-    The symmetric difference for sets is associative such that 
+    Set symmetric difference is associative such that 
     \begin{equation*}
         \bm{
             \Big \langle \Gamma \oplus \Pi \Big \rangle
