ch3 cleaned up some theorem statements

--- a/resources/LaTeX/2.3.functions/0085_2366/0085_2366.tex
+++ b/resources/LaTeX/2.3.functions/0085_2366/0085_2366.tex
@@ -15,7 +15,7 @@
     Let \bm{$\sigma$} be the invertible function 
     \bm{$\sigma : \Theta \rightarrow \Omega$}, 
     and let \bm{$\phi$} be the invertible function 
-    \bm{$\phi : \Phi \rightarrow \Theta$}. 
+    \raggedright \bm{$\phi : \Phi \rightarrow \Theta$}. 
     \begin{equation*}
         \text{The inverse of the composition }
         \bm{\sigma \circ \phi}
