--- a/resources/LaTeX/2.3.functions/0086_2367a/0086_2367a.tex
+++ b/resources/LaTeX/2.3.functions/0086_2367a/0086_2367a.tex
@@ -14,14 +14,14 @@
 \begin{theorem}[\textbf{2367a}]
     Suppose that \bm{$\mathrm{A}$}, and \bm{$\Lambda$} are sets with universal set \bm{$\Omega$}. 
     \begin{center}
-    Let \bm{$\lambda_{\mathrm{A} \cap \Lambda}$} be the characteristic function 
-    \bm{$\lambda_{\mathrm{A} \cap \Lambda}: \Omega \rightarrow \{0, 1\}$}, 
-    let \bm{$\lambda_{\mathrm{A}}$} be the characteristic function 
-    \bm{$\lambda_{\mathrm{A}}: \Omega \rightarrow \{0, 1\}$},
-    and let \bm{$\lambda_{\Lambda}$} be the characteristic function  
-    \bm{$\lambda_{\Lambda}: \Omega \rightarrow \{0, 1\}$}.
+        Let \bm{$\lambda_{\mathrm{A} \cap \Lambda}$} be the characteristic function 
+        \bm{$\lambda_{\mathrm{A} \cap \Lambda}: \Omega \rightarrow \{0, 1\}$}, 
+        let \bm{$\lambda_{\mathrm{A}}$} be the characteristic function 
+        \bm{$\lambda_{\mathrm{A}}: \Omega \rightarrow \{0, 1\}$},
+        and let \bm{$\lambda_{\Lambda}$} be the characteristic function  
+        \raggedright \bm{$\lambda_{\Lambda}: \Omega \rightarrow \{0, 1\}$}.
     \end{center}
-    \vspace{1\baselineskip}
+    %\vspace{1\baselineskip}
     \begin{equation*}
         \bm{
             \lambda_{\mathrm{A} \cap \Lambda}\big[ \iota \big] 
