--- a/resources/LaTeX/2.3.functions/0089_2367d/0089_2367d.tex
+++ b/resources/LaTeX/2.3.functions/0089_2367d/0089_2367d.tex
@@ -19,7 +19,7 @@
         let \bm{$\lambda_{\mathrm{A}}$} be the characteristic function 
         \bm{$\lambda_{\mathrm{A}} : \Omega \rightarrow \{0, 1\}$}, 
         and let \bm{$\lambda_{\Lambda}$} be the characteristic function  
-        \bm{$\lambda_{\Lambda}: \Omega \rightarrow \{0, 1\}$}. 
+        \raggedright \bm{$\lambda_{\Lambda}: \Omega \rightarrow \{0, 1\}$}.
     \end{center}
     \begin{equation*}
         \bm{
